[build-system]
requires = [
    "setuptools>=42",
    "scikit-build>=0.13",
    "scikit-build-core>=0.3.3",
    "nanobind>=1.8.0",
    "cmake>=3.20",
    "ninja",
]
build-backend = "scikit_build_core.build"

[project]
name = "lctorch"
requires-python = ">=3.8"
authors = [
    {name = "Nathan Fradet"}
]
maintainers = [
    {name = "Nathan Fradet"}
]
description = "Longest Common Subsequence (LCS) for PyTorch tensors."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ["pytorch", "torch", "lcs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
]

dependencies = [
    "pySmartDL",
    "platformdirs"
]

[project.urls]
Homepage = "https://github.com/Natooz/LCTorch"
Repository = "https://github.com/Natooz/LCTorch"
Issues = "https://github.com/Natooz/LCTorch/issues"

[tool.scikit-build]
cmake.minimum-version = "3.26.1"
ninja.minimum-version = "1.11"

[tool.scikit-build.cmake.define]
BUILD_PY = "ON"

[tool.scikit-build.metadata]
version.provider = "scikit_build_core.metadata.regex"
version.input = "lctorch/__init__.py"

[tool.skbuild]
packages = ["lctorch"]
cmake-args = []

[project.optional-dependencies]
test = ["pytest-cov", "pytest-xdist[psutil]"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
log_cli_level = "INFO"
filterwarnings = [
  "error",
]
testpaths = ["tests"]

[tool.ruff]
target-version = "py38"
extend-select = [
    "ARG",
    "A",
    "ANN",
    "B",
    "BLE",
    "C4",
    "COM",
    "D",
    "E",
    "EM",
    "EXE",
    "F",
    "FA",
    "FBT",
    "G",
    "I",
    "ICN",
    "INP",
    "INT",
    "ISC",
    "N",
    "NPY",
    "PERF",
    "PGH",
    "PTH",
    "PIE",
    # "PL",
    "PT",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    # "SLF",
    "SIM",
    "T",
    "TCH",
    "TID",
    "UP",
    "W",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",  # allow assertions in tests
    "T201",  # print allowed
]
